# tvoyservice

./: README.md  manage.py  pyproject.toml
main/: views.py
main/scss/main/: _about.scss  _common.scss  _contact.scss  _flex.scss  _fonts.scss  _functions.scss  _header.scss  _mixins.scss  _reset.scss  _services.scss  _variables.scss  style.css  style.css.map  style.scss
main/static/js/: main.js
main/templates/main/: index.html
templates/: base.html
tvoiservice/: asgi.py  settings.py  urls.py  wsgi.py
