[tool.poetry]
name = "tvoiservice"
version = "0.1.0"
description = ""
authors = ["IvanKliazovich <Ivan.Kliazovich@fyst.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-sass-processor = "^1.2.2"
django-compressor = "^4.3.1"
libsass = "^0.22.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
